--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "play chess with friends",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node index.js"
   },
   "author": "oimaster",
   "license": "ISC",
