--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -12,5 +12,5 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Message that will be displayed on users first issue'
-        pr-message: 'Message that will be displayed on users first pull request'
+        issue-message: 'Thanks for your issue. OI-Master will come and check it.'
+        pr-message: 'Thanks for your pull request. Usually OI-Master will come and merge it quickly.'
